application/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: discoodle-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: discoodle-issuer
spec:
  rules:
    - host: discoodle.bastian-somon.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discoodle-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: discoodle-backend
                port:
                  number: 8080
  tls:
    - secretName: discoodle-account-key
      hosts:
        - discoodle.bastian-somon.fr
  defaultBackend:
    service:
      name: discoodle-frontend
      port:
        number: 80
